--- a/Entrega 4 Grupal/JAPFLIX/index.html
+++ b/Entrega 4 Grupal/JAPFLIX/index.html
@@ -25,8 +25,9 @@
     </div>
 
     <div class="album">
-      <ul class="list-group container" id="lista">
-      </ul>
+      <div class="list-group container" id="lista">
+        
+      </div>
     </div>
   </main>
 
